# Mezz_StaticFoundation

./: .gitignore  .travis.yml  CMakeLists.txt  Jagati.cmake  Jenkinsfile  README.md  appveyor.yml  codecov.yml
CMake/: CMakeLists.txt  Jagati.cmake
dox/: Dox.h  ExceptionsPage.h  dox.h
dox/doxyfiles/: Doxyfile
include/: CrossPlatformExport.h  DataTypes.h  DetectionTraits.h  ExceptionBase.h  RuntimeStatics.h  StaticFoundation.h  StaticString.h  SuppressWarnings.h  Trace.h  crossplatformexport.h  datatypes.h  runtime_statics.h  runtimestatics.h  staticfoundation.h  supresswarnings.h
src/: ExceptionBase.cpp  RuntimeStatics.cpp  StaticString.cpp  Trace.cpp  runtime_statics.cpp  runtimestatics.cpp
swig/: SwigConfig.h  swigconfig.h
test/: Tests.cpp  Tests.h  tests.cpp  tests.h
